argocd/manifests/snippetbox/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: snippetbox
  labels:
    app.kubernetes.io/name: snippetbox
    app.kubernetes.io/managed-by: argocd
