argocd/manifests/snippetbox/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: snippetbox
  namespace: snippetbox
  labels:
    app: snippetbox
    app.kubernetes.io/name: snippetbox
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: snippetbox
  template:
    metadata:
      labels:
        app: snippetbox
        app.kubernetes.io/name: snippetbox
    spec:
      containers:
        - name: snippetbox
          image: pawelmalak/snippet-box@sha256:4aac6fe8818dbb78a60e09d1556949e28f85cff8d50bdc6356b898806ea5f4f7
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 5000
              protocol: TCP
          volumeMounts:
            - name: snippetbox-data
              mountPath: /app/data
          resources:
            requests:
              cpu: 25m
              memory: 64Mi
            limits:
              cpu: 250m
              memory: 256Mi
          readinessProbe:
            httpGet:
              path: /
              port: 5000
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 5000
            initialDelaySeconds: 30
            periodSeconds: 20
      volumes:
        - name: snippetbox-data
          persistentVolumeClaim:
            claimName: snippetbox-data-pvc
