argocd/manifests/snippetbox/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: snippetbox
  namespace: snippetbox
  labels:
    app: snippetbox
    app.kubernetes.io/name: snippetbox
spec:
  type: ClusterIP
  selector:
    app: snippetbox
  ports:
    - name: http
      port: 5000
      targetPort: 5000
      protocol: TCP
